app03/envoy-config.yaml
# 对管理日志及端口进行简单配置，用于接收管理消息的端口为9999
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 9999 }
# 定义静态资源
static_resources:
  listeners:
    # 配置一个接收流量的监听器，接收客户发送的请求
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            # 定义一个过滤器用于转发流量
            - name: envoy.http_connection_manager
              config:
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      # 不绑定域名
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: some_service }
                http_filters:
                  - name: envoy.router
  clusters:
    - name: some_service
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      # 配置后端挂载的IP地址
      hosts: [{ socket_address: { address: 127.0.0.1, port_value: 8080 }}]
